assertEquals metods removed for SimpleDish & DishProduct